--- a/styles/flipcard.css
+++ b/styles/flipcard.css
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
 }
-body main div .aboutContainer img {
+.aboutContainer img {
   width: 400px;
   height: 300px;
   border-radius: 10%;
